--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
   --primary-text-color: rgba(0, 0, 0, 0.8);
   --primary-white-color: #ffffff;
   --title-text-color: #000000;
-  --accent-color: #18a0fb;
+  --accent-color: #0a6cad;
   --secondary-bg-color: #f5f5f5;
   --border-footer: rgba(0, 0, 0, 0.5);
 }
@@ -52,7 +52,18 @@ p {
   padding-bottom: 0;
 }
 /* Header */
+.header,
+.footer-section {
+  max-width: 1600px;
+  margin: 0 auto;
 
+  background-color: #18a0fb;
+  background-image: linear-gradient(
+    180deg,
+    #18a0fb 0%,
+    rgba(19, 46, 155, 0.5) 100%
+  );
+}
 .header-nav {
   display: flex;
   align-items: center;
@@ -90,7 +101,7 @@ p {
   padding-top: 21px;
   padding-bottom: 21px;
 
-  color: var(--accent-color);
+  color: var(--primary-white-color);
   font-size: 15px;
   font-weight: 500;
   line-height: 1.2;
@@ -156,10 +167,23 @@ p {
 /* Hero */
 .hero {
   text-align: center;
+  margin: 0 auto;
+  width: 1600px;
+  height: 960px;
+  /* background-color: rgb(49, 49, 94, 0.2); */
+  background-image: linear-gradient(
+      rgba(190, 200, 232, 0.2),
+      rgba(5, 47, 185, 0.2)
+    ),
+    url(../images/Rectangle.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .hero-title {
   margin-bottom: 40px;
+  padding-top: 448px;
   font-size: 56px;
   font-weight: 400;
   line-height: 1.42;
@@ -261,6 +285,9 @@ p {
 }
 
 .section-singup {
+  max-width: 1600px;
+  margin: 0 auto;
+
   background-color: var(--secondary-bg-color);
 }
 
@@ -310,6 +337,25 @@ p {
 .soc-list .item {
   margin-top: 80px;
   margin-bottom: 40px;
+  width: 44px;
+  height: 44px;
+}
+.soc-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+
+  fill: var(--title-text-color);
+  background-color: var(--primary-white-color);
+}
+
+.soc-link:hover,
+.soc-link:focus {
+  background-color: var(--title-text-color);
+  fill: var(--primary-white-color);
 }
 
 .soc-list .item + .item {
