--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,9 @@
   --accent-color: #0a6cad;
   --secondary-bg-color: #f5f5f5;
   --border-footer: rgba(0, 0, 0, 0.5);
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  --secondary-color:rgba(157,164,189,.4);
+  --box-shadow-modal: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 body {
@@ -77,13 +80,19 @@ p {
   font-weight: 400;
   line-height: 1.2;
   letter-spacing: -0.427px;
+  transition: color 250ms var(--timing-function);
 }
 
-.logo:hover {
+.logo:hover, .logo:focus {
   color: var(--primary-white-color);
 }
 
-.icon-logo:hover {
+.icon-logo{
+  transition: fill 250ms var(--timing-function);
+}
+
+.icon-logo:hover,  
+.icon-logo:focus{
   fill: var(--primary-white-color);;
 }
 
@@ -106,6 +115,8 @@ p {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: -0.225px;
+
+  transform: color 250ms var(--timing-function);
 }
 
 .site-nav .link:hover,
@@ -138,6 +149,8 @@ p {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: -0.225px;
+
+  
 }
 
 .primary {
@@ -145,6 +158,7 @@ p {
   text-align: center;
   color: var(--accent-color);
   background-color: var(--primary-white-color);
+  transition: color 250ms var(--timing-function ), background-color 250ms var(--timing-function );
 }
 
 .primary:hover {
@@ -156,6 +170,7 @@ p {
   background-color: var(--accent-color);
 
   letter-spacing: -0.255px;
+  transition: color 250ms var(--timing-function ), background-color 250ms var(--timing-function ), border-color 250ms var(--timing-function);
 }
 
 .secondary:hover {
@@ -320,6 +335,10 @@ p {
   margin-left: 100px;
 }
 
+.footer-list .item{
+  transition: color 250ms var(--timing-function);
+}
+
 .footer-list .item:hover{
   color: var(--primary-white-color);
 }
@@ -354,6 +373,8 @@ p {
 
   fill: var(--title-text-color);
   background-color: var(--primary-white-color);
+
+  transition: background-color 250ms var(--timing-function), fill 250ms var(--timing-function);
 }
 
 .soc-link:hover,
@@ -372,4 +393,116 @@ p {
   font-weight: 400;
   line-height: 1.6;
   letter-spacing: -0.225px;
+}
+
+/* Modal */
+
+.backdrop {
+  position: fixed;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity 250ms var(--timing-function)  transform 250ms var(--timing-function), visibility 250ms var(--timing-function);;
+
+}
+
+.backdrop.is-hidden{
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal{
+  transform: translate(-50%, -50%) scale(0.7);
+  opacity: 0;
+}
+
+.modal {
+  position: absolute;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  min-width: 528px;
+  min-height: 581px;
+  opacity: 1;
+  background-color: var(--primary-white-color);
+  border-radius: 4px;
+  box-shadow: var(--box-shadow-modal);
+  transition: transform 250ms var(--timing-function), opacity 250ms var(--timing-function);
+}
+
+.button-close {
+  position: absolute;
+  top:8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+  background-color: var(--primary-white-color);
+
+}
+
+.form-modal {
+ 
+  padding: 50px 50px;
+}
+
+.modal-label {
+  /* display: block; */
+  margin-bottom: 12px;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 1.366;
+    letter-spacing: 1.1px;
+    color: var(--title-text-color);
+    text-transform: uppercase;
+
+    transition: color 250ms var(--timing-function);
+}
+
+.modal-label:hover {
+ color: var(--accent-color);
+}
+.wrap-input {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+.modal-input, .modal-textarea{
+  border: transparent;
+  border-bottom: 1px solid var(--secondary-color);
+  outline: none;
+
+  transition: border-bottom 250ms var(--timing-function);
+}
+
+.modal-input:hover, .modal-textarea:hover{
+  border-bottom: 1px solid var(--accent-color);
+
+}a
+.wrap-textarea{
+  margin-bottom: 30px;
+}
+.modal-textarea{
+width: 100%;
+height:  100px;
+resize: none;
+
+}
+
+.modal-button{
+  
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center
 }
